@@ -1,6 +1,6 @@
 package org.cryptomator.jfuse.api;
 
-import jdk.incubator.foreign.MemorySegment;
+import java.lang.foreign.MemorySegment;
 
 public record FuseArgs(MemorySegment args, boolean multithreaded, boolean foreground) {
 }
