@@ -5,25 +5,17 @@ package org.cryptomator.jfuse.linux.amd64.extr;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 class constants$0 {
 
-    static final FunctionDescriptor fuse_opt_add_arg$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT
-    );
-    static final MethodHandle fuse_opt_add_arg$MH = RuntimeHelper.downcallHandle(
-        "fuse_opt_add_arg",
-        constants$0.fuse_opt_add_arg$FUNC, false
-    );
     static final FunctionDescriptor fuse_mount$FUNC = FunctionDescriptor.of(Constants$root.C_POINTER$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
         Constants$root.C_POINTER$LAYOUT
     );
     static final MethodHandle fuse_mount$MH = RuntimeHelper.downcallHandle(
         "fuse_mount",
-        constants$0.fuse_mount$FUNC, false
+        constants$0.fuse_mount$FUNC
     );
     static final FunctionDescriptor fuse_unmount$FUNC = FunctionDescriptor.ofVoid(
         Constants$root.C_POINTER$LAYOUT,
@@ -31,7 +23,7 @@ class constants$0 {
     );
     static final MethodHandle fuse_unmount$MH = RuntimeHelper.downcallHandle(
         "fuse_unmount",
-        constants$0.fuse_unmount$FUNC, false
+        constants$0.fuse_unmount$FUNC
     );
     static final FunctionDescriptor fuse_parse_cmdline$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -41,7 +33,7 @@ class constants$0 {
     );
     static final MethodHandle fuse_parse_cmdline$MH = RuntimeHelper.downcallHandle(
         "fuse_parse_cmdline",
-        constants$0.fuse_parse_cmdline$FUNC, false
+        constants$0.fuse_parse_cmdline$FUNC
     );
     static final FunctionDescriptor fuse_fill_dir_t$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -50,7 +42,18 @@ class constants$0 {
         Constants$root.C_LONG_LONG$LAYOUT
     );
     static final MethodHandle fuse_fill_dir_t$MH = RuntimeHelper.downcallHandle(
-        constants$0.fuse_fill_dir_t$FUNC, false
+        constants$0.fuse_fill_dir_t$FUNC
+    );
+    static final FunctionDescriptor fuse_new$FUNC = FunctionDescriptor.of(Constants$root.C_POINTER$LAYOUT,
+        Constants$root.C_POINTER$LAYOUT,
+        Constants$root.C_POINTER$LAYOUT,
+        Constants$root.C_POINTER$LAYOUT,
+        Constants$root.C_LONG_LONG$LAYOUT,
+        Constants$root.C_POINTER$LAYOUT
+    );
+    static final MethodHandle fuse_new$MH = RuntimeHelper.downcallHandle(
+        "fuse_new",
+        constants$0.fuse_new$FUNC
     );
 }
 
