@@ -5,8 +5,8 @@ package org.cryptomator.jfuse.mac.extr;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 class constants$1 {
 
     static final FunctionDescriptor fuse_destroy$FUNC = FunctionDescriptor.ofVoid(
@@ -14,26 +14,26 @@ class constants$1 {
     );
     static final MethodHandle fuse_destroy$MH = RuntimeHelper.downcallHandle(
         "fuse_destroy",
-        constants$1.fuse_destroy$FUNC, false
+        constants$1.fuse_destroy$FUNC
     );
     static final FunctionDescriptor fuse_loop$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_POINTER$LAYOUT
     );
     static final MethodHandle fuse_loop$MH = RuntimeHelper.downcallHandle(
         "fuse_loop",
-        constants$1.fuse_loop$FUNC, false
+        constants$1.fuse_loop$FUNC
     );
     static final FunctionDescriptor fuse_exit$FUNC = FunctionDescriptor.ofVoid(
         Constants$root.C_POINTER$LAYOUT
     );
     static final MethodHandle fuse_exit$MH = RuntimeHelper.downcallHandle(
         "fuse_exit",
-        constants$1.fuse_exit$FUNC, false
+        constants$1.fuse_exit$FUNC
     );
     static final FunctionDescriptor fuse_get_context$FUNC = FunctionDescriptor.of(Constants$root.C_POINTER$LAYOUT);
     static final MethodHandle fuse_get_context$MH = RuntimeHelper.downcallHandle(
         "fuse_get_context",
-        constants$1.fuse_get_context$FUNC, false
+        constants$1.fuse_get_context$FUNC
     );
     static final FunctionDescriptor fuse_main_real$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_INT$LAYOUT,
@@ -44,7 +44,14 @@ class constants$1 {
     );
     static final MethodHandle fuse_main_real$MH = RuntimeHelper.downcallHandle(
         "fuse_main_real",
-        constants$1.fuse_main_real$FUNC, false
+        constants$1.fuse_main_real$FUNC
+    );
+    static final FunctionDescriptor fuse_get_session$FUNC = FunctionDescriptor.of(Constants$root.C_POINTER$LAYOUT,
+        Constants$root.C_POINTER$LAYOUT
+    );
+    static final MethodHandle fuse_get_session$MH = RuntimeHelper.downcallHandle(
+        "fuse_get_session",
+        constants$1.fuse_get_session$FUNC
     );
 }
 
