@@ -5,8 +5,8 @@ package org.cryptomator.jfuse.mac.extr;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 public class fuse_args {
 
     static final  GroupLayout $struct$LAYOUT = MemoryLayout.structLayout(
@@ -40,13 +40,13 @@ public class fuse_args {
         return fuse_args.argv$VH;
     }
     public static MemoryAddress argv$get(MemorySegment seg) {
-        return (jdk.incubator.foreign.MemoryAddress)fuse_args.argv$VH.get(seg);
+        return (java.lang.foreign.MemoryAddress)fuse_args.argv$VH.get(seg);
     }
     public static void argv$set( MemorySegment seg, MemoryAddress x) {
         fuse_args.argv$VH.set(seg, x);
     }
     public static MemoryAddress argv$get(MemorySegment seg, long index) {
-        return (jdk.incubator.foreign.MemoryAddress)fuse_args.argv$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemoryAddress)fuse_args.argv$VH.get(seg.asSlice(index*sizeof()));
     }
     public static void argv$set(MemorySegment seg, long index, MemoryAddress x) {
         fuse_args.argv$VH.set(seg.asSlice(index*sizeof()), x);
@@ -72,11 +72,7 @@ public class fuse_args {
     public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment allocate(ResourceScope scope) { return allocate(SegmentAllocator.nativeAllocator(scope)); }
-    public static MemorySegment allocateArray(int len, ResourceScope scope) {
-        return allocateArray(len, SegmentAllocator.nativeAllocator(scope));
-    }
-    public static MemorySegment ofAddress(MemoryAddress addr, ResourceScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session); }
 }
 
 
